--- a/index.qmd
+++ b/index.qmd
@@ -24,23 +24,25 @@ page-layout: full
 
 My name is Amaan, and I'm a first-year Biostatistics graduate student at the UCLA Fielding School of Public Health. My current research interests include genomic data analysis, chronic disease epidemiology, survival analysis, and clinical trial design. These interests remain in perpetual refinement, and I'm eager to explore a variety of biostatistical research avenues as I navigate my graduate education.</p>
 
-<p>I recently completed my undergraduate studies in Public Health and Data Science at UC Berkeley. During my undergraduate years, I was </p>
+<p>I recently completed my undergraduate studies in Public Health and Data Science at UC Berkeley. During my undergraduate years, I was fortunate to enrich my academic experience through various research opportunities. In the summer of 2022, I was a participant in the Big Data Summer Institute, an NIH/NHLBI-sponsored Summer Institute in Biostatistics (SIBS) program at the University of Michigan. There, I conducted explainable artificial intelligence (XAI) research supervised by Dr. Nikola Banovic (Electrical Engineering & Computer Science). We adapted the LIME and SHAP frameworks for compatibility with multisequence MRI input and a brain tumor segmentation task. We sought to leverage these XAI techniques beyond within the segmentation domain by framing tumor segmentation as a binary pixel classification task and tracing the decision boundary. You can learn more about this project here! </p>
 :::
 :::::
 
 ------------------------------------------------------------------------
 
 ::: grid-two
-### Interests
+### Research Interests
 
 -   Biomarker Evaluation\
 -   Survival Analysis\
 -   Chronic Disease Epidemiology\
+-   Clinical Trial Design\
+-   Genomics\
 -   STEM Accessibility
 
 ### Education
 
-**M.S. in Biostatistics**, 2024–Present\
+**M.S. in Biostatistics**, 2024–2026\
 UCLA Fielding School of Public Health
 
 **B.A. in Public Health & Data Science**, 2020–2024\
