--- a/index.qmd
+++ b/index.qmd
@@ -26,7 +26,7 @@ page-layout: full
 
 <p>Hi, and thanks for stopping by! I’m Amaan, a first-year graduate student in [Biostatistics](https://ph.ucla.edu/departments/biostatistics) at the [UCLA Fielding School of Public Health](https://ph.ucla.edu). I’m interested in how statistical methods can be used to answer meaningful questions in public health and medicine—especially in the areas of genomic data analysis, chronic disease epidemiology, survival analysis, and clinical trial design. These interests are still evolving as I dive deeper into the field.</p>
 
-<p>I earned my undergraduate degree from [UC Berkeley](https://www.berkeley.edu) (Go Bears!), where I majored in [Public Health](https://publichealth.berkeley.edu) and minored in [Data Science](https://cdss.berkeley.edu). My research there centered around applying quantitative tools to health problems, including projects in survival analysis, gene expression data analysis, machine learning, and tumor segmentation. You can learn more about some of that work <a href="#">here</a>.</p>
+<p>I earned my undergraduate degree from [UC Berkeley](https://www.berkeley.edu) (Go Bears!), where I majored in [Public Health](https://publichealth.berkeley.edu) and minored in [Data Science](https://cdss.berkeley.edu). My research there centered around applying quantitative tools to health problems, including projects in survival analysis, gene expression data analysis, machine learning, and tumor segmentation. You can learn more about that work <a href="#">here</a>.</p>
 
 <p>I was born and raised in sunny Los Angeles, CA, and I’m excited to back in my hometown for graduate school. Outside of academics, I enjoy playing tennis, spending time with my dog Louie, exploring the city with friends, and trying to become a semi-competent cook.</p>
 :::
